<resources>
    <string name="app_name">Vaccine Calculator</string>
    <string name="textBox1">Date of Birth</string>
    <string name="textBox2">Date of Vaccine</string>
    <string name="calculateButton">Calculate</string>
    <string name="information"></string>
    <string name="dateHint">Select a Date</string>
    <string name="title">Title</string>
    <string name="alias">Aliases</string>
    <string name="nextButton">Search Vaccines</string>
    <string name="currentAge">Patient\n Current\n Age</string>
    <string name="vaccineAge">Age\n at\n Vaccination</string>
    <string name="timeVaccine">Time\n Since\n Vaccination</string>
</resources>
