<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:layout_width="match_parent">

    <TextView
            android:id="@+id/textView2"
            android:layout_width="170dp"
            android:layout_height="28dp"
            app:autoSizeTextType="uniform"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/textBox1"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/textView3"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="96dp" app:layout_constraintTop_toTopOf="parent"/>
    <Button
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/idDateOfBirth"
            android:text=""
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            android:selectAllOnFocus="true"
            android:hint="@string/dateHint" android:gravity="center_vertical|center_horizontal"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"/>

    <TextView
            android:id="@+id/textView3"
            android:layout_width="170dp"
            android:layout_height="28dp"
            app:autoSizeTextType="uniform"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center_vertical|center"
            android:text="@string/textBox2"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="96dp" app:layout_constraintTop_toTopOf="parent"/>

    <Button
            android:id="@+id/idVaccineDate"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:gravity="center_vertical|center_horizontal"
            android:hint="@string/dateHint"
            android:selectAllOnFocus="true"
            android:text=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/idDateOfBirth"
            app:layout_constraintTop_toBottomOf="@+id/textView3"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:autoSizeTextType="uniform"
            android:id="@+id/idButton" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/idVaccineDate" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:text="@string/calculateButton"
            app:layout_constraintHorizontal_bias="0.501"/>
    <TextView
            android:layout_width="224dp"
            android:layout_height="wrap_content"
            app:autoSizeTextType="uniform"
            android:id="@+id/idInformation"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/idButton" android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/textView" android:layout_marginStart="8dp"
            android:gravity="center" app:layout_constraintHorizontal_bias="0.507"/>
    <TextView
            android:layout_width="224dp"
            android:layout_height="wrap_content"
            app:autoSizeTextType="uniform"
            android:id="@+id/idInformation2"
            app:layout_constraintTop_toBottomOf="@+id/idInformation"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:textSize="18sp" app:layout_constraintStart_toEndOf="@+id/textView4"
            android:layout_marginStart="8dp" android:layout_marginTop="44dp" android:gravity="center"
            app:layout_constraintHorizontal_bias="0.503"/>
    <TextView
            android:layout_width="224dp"
            android:layout_height="wrap_content"
            app:autoSizeTextType="uniform"
            android:id="@+id/idInformation3" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/idInformation2"
            android:textSize="18sp" app:layout_constraintStart_toEndOf="@+id/textView5"
            android:layout_marginStart="8dp"
            android:layout_marginTop="48dp" app:layout_constraintHorizontal_bias="0.503" android:gravity="center"/>
    <android.support.constraint.Barrier android:layout_width="wrap_content" android:layout_height="wrap_content"
                                        android:id="@+id/barrier" app:barrierDirection="top"/>
    <android.support.constraint.Group android:layout_width="wrap_content" android:layout_height="wrap_content"
                                      android:id="@+id/group"/>

    <Button
            android:id="@+id/idButtonNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.974"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/idInformation3"
            app:srcCompat="@android:drawable/ic_menu_search" android:text="@string/nextButton"/>
    <TextView
            android:text="@string/currentAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:autoSizeTextType="uniform"
            android:id="@+id/textView" android:gravity="right|fill_vertical"
            android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/idButton"
            android:layout_marginStart="48dp" app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:text="@string/vaccineAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:autoSizeTextType="uniform"
            android:id="@+id/textView4" android:gravity="right|fill_vertical"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"/>
    <TextView
            android:text="@string/timeVaccine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:autoSizeTextType="uniform"
            android:id="@+id/textView5" android:gravity="right|fill_vertical"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4" android:layout_marginTop="20dp"/>
</android.support.constraint.ConstraintLayout>